# AltCompositeEnvironmentCalibration

./: .gitignore  PointsCollection.py  README.md  Utils.py  generateGeogebraScirpyBySnapshots.py  generate_trajectory.py  main.py  micro_calibration.py  pyproject.toml  requirements.txt  static_test.py  testOptimize.py
dataset/allAxis_1Marker_fix3/: #000.json  #001.json  #002.json  #003.json  #004.json  #005.json  #006.json  #007.json  #008.json  #009.json  #010.json  #011.json  #012.json  #013.json  #014.json  #015.json  #016.json  #017.json  #018.json  #019.json  #020.json  #021.json  #022.json  #023.json  #024.json  #025.json  #026.json  #027.json  #028.json  #029.json  #030.json  #031.json  #032.json  #033.json  #034.json  #035.json
dataset/center_full_random_1/: #000.json  #001.json  #002.json  #003.json  #004.json  #005.json  #006.json  #007.json  #008.json  #009.json
dataset/center_full_random_2/: #000.json  #001.json  #002.json  #003.json  #004.json  #005.json  #006.json  #007.json  #008.json  #009.json
dataset/full_random/: #000.json  #001.json  #002.json  #003.json  #004.json  #005.json  #006.json  #007.json  #008.json  #009.json
dumps/: 5point.json  8points.AltPointsCollector.Result.json  High.OffsetSamples.json  Low.OffsetSamples.json  OneAlt.ManualOffsetSamples.json
micro_calibarion_dumps/: 10mmOffset.json
optimizatorTests/: gradientCalculation.typ
tests/: batch_optimization.py  gradientCalculation.typ  optimization_utils.py  test_optimization.py  test_optimization_from_dumps.py  test_optimization_real_rays.py
(+3 files in other folders)
