[project]
name = "altcompositeenvironmentcalibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cadabra>=0.1.0",
    "galgebra>=0.5.2",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    "optimizatorTests",
]
